--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -66,6 +66,10 @@
                                                class="btn btn-danger btn-sm waves-effect waves-light m-b-5">
                                                 <i class="fa fa-trash-o"></i> <span>删除</span>
                                             </a>
+                                            <a v-on:click="sync(item.id)" href="javascript:void(0)"
+                                               class="btn btn-info btn-sm waves-effect waves-light m-b-5">
+                                                <i class="fa fa-refresh"></i> <span>同步</span>
+                                            </a>
                                             <a v-show="item.status == 'Publish'"
                                                class="btn btn-warning btn-sm waves-effect waves-light m-b-5"
                                                :href="'../article/' + item.slug"
@@ -107,6 +111,7 @@
 
 @section scripts
 {
+    <script src="~/lib/bootbox/bootbox.all.min.js"></script>
     <script>
         var tale = new $.tale();
         var vm = new Vue({
@@ -176,6 +181,28 @@
                                     }
                                 }
                             });
+                        }
+                    });
+                },
+                sync: function (cid) {
+                    bootbox.prompt({
+                        title: "This is a prompt with a set of checkbox inputs!",
+                        value: ['1', '3'],
+                        inputType: 'checkbox',
+                        inputOptions: [{
+                                text: 'Choice One',
+                                value: '1',
+                            },
+                            {
+                                text: 'Choice Two',
+                                value: '2',
+                            },
+                            {
+                                text: 'Choice Three',
+                                value: '3',
+                            }],
+                        callback: function (result) {
+                            console.log(result);
                         }
                     });
                 }
